# plugin.service.catftp.server

./: README.md  addon.xml  pyproject.toml  requirements.txt
resources/: settings.xml
resources/lib/: service.py
resources/lib/modules/: constants.py  ftp_server.py  logger.py
resources/lib/modules/pyftpdlib/: README.md  authorizers.py  servers.py
